src/views/ArticleDetail/MetaInfo/styles.module.css
.info {
  @mixin flex-center-start;

  flex-wrap: wrap;
  row-gap: var(--sp8);
  padding: var(--ar17-100) 0;
  margin-top: var(--ar17-100);
  font-size: var(--text12);
  line-height: 1.125rem;

  & .author {
    display: flex;
    margin-right: 0;
    color: var(--color-grey-darker);

    @media (--sm-up) {
      display: none;
    }
  }

  & :global(button) {
    line-height: 1.125rem;
  }
}

.time {
  margin-right: var(--sp4);
  color: var(--color-grey-darker);
}

.dot {
  margin: 0 var(--sp8);
  color: var(--color-grey-darker);
}

